@@ -65,7 +65,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     class _Mem_fn;
   template<typename _Tp, typename _Class>
     _Mem_fn<_Tp _Class::*>
-    mem_fn(_Tp _Class::*);
+    mem_fn(_Tp _Class::*) noexcept;
 
 _GLIBCXX_HAS_NESTED_TYPE(result_type)
 
@@ -528,13 +528,16 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
 
       template<typename _Tp>
 	_Res
-	_M_call(_Tp& __object, const volatile _Class *,
+	_M_call(_Tp&& __object, const volatile _Class *,
 		_ArgTypes... __args) const
-	{ return (__object.*__pmf)(std::forward<_ArgTypes>(__args)...); }
+	{
+	  return (std::forward<_Tp>(__object).*__pmf)
+	    (std::forward<_ArgTypes>(__args)...);
+	}
 
       template<typename _Tp>
 	_Res
-	_M_call(_Tp& __ptr, const volatile void *, _ArgTypes... __args) const
+	_M_call(_Tp&& __ptr, const volatile void *, _ArgTypes... __args) const
 	{ return ((*__ptr).*__pmf)(std::forward<_ArgTypes>(__args)...); }
 
     public:
@@ -555,11 +558,16 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
       // Handle smart pointers, references and pointers to derived
       template<typename _Tp>
 	_Res
-	operator()(_Tp& __object, _ArgTypes... __args) const
+	operator()(_Tp&& __object, _ArgTypes... __args) const
 	{
-	  return _M_call(__object, &__object,
+	  return _M_call(std::forward<_Tp>(__object), &__object,
 	      std::forward<_ArgTypes>(__args)...);
 	}
+
+      template<typename _Tp>
+	_Res
+	operator()(reference_wrapper<_Tp> __ref, _ArgTypes... __args) const
+	{ return operator()(__ref.get(), std::forward<_ArgTypes>(__args)...); }
 
     private:
       _Functor __pmf;
@@ -575,13 +583,16 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
 
       template<typename _Tp>
 	_Res
-	_M_call(_Tp& __object, const volatile _Class *,
+	_M_call(_Tp&& __object, const volatile _Class *,
 		_ArgTypes... __args) const
-	{ return (__object.*__pmf)(std::forward<_ArgTypes>(__args)...); }
+	{
+	  return (std::forward<_Tp>(__object).*__pmf)
+	    (std::forward<_ArgTypes>(__args)...);
+	}
 
       template<typename _Tp>
 	_Res
-	_M_call(_Tp& __ptr, const volatile void *, _ArgTypes... __args) const
+	_M_call(_Tp&& __ptr, const volatile void *, _ArgTypes... __args) const
 	{ return ((*__ptr).*__pmf)(std::forward<_ArgTypes>(__args)...); }
 
     public:
@@ -601,11 +612,16 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
 
       // Handle smart pointers, references and pointers to derived
       template<typename _Tp>
-	_Res operator()(_Tp& __object, _ArgTypes... __args) const
+	_Res operator()(_Tp&& __object, _ArgTypes... __args) const
 	{
-	  return _M_call(__object, &__object,
+	  return _M_call(std::forward<_Tp>(__object), &__object,
 	      std::forward<_ArgTypes>(__args)...);
 	}
+
+      template<typename _Tp>
+	_Res
+	operator()(reference_wrapper<_Tp> __ref, _ArgTypes... __args) const
+	{ return operator()(__ref.get(), std::forward<_ArgTypes>(__args)...); }
 
     private:
       _Functor __pmf;
@@ -621,13 +637,16 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
 
       template<typename _Tp>
 	_Res
-	_M_call(_Tp& __object, const volatile _Class *,
+	_M_call(_Tp&& __object, const volatile _Class *,
 		_ArgTypes... __args) const
-	{ return (__object.*__pmf)(std::forward<_ArgTypes>(__args)...); }
+	{
+	  return (std::forward<_Tp>(__object).*__pmf)
+	    (std::forward<_ArgTypes>(__args)...);
+	}
 
       template<typename _Tp>
 	_Res
-	_M_call(_Tp& __ptr, const volatile void *, _ArgTypes... __args) const
+	_M_call(_Tp&& __ptr, const volatile void *, _ArgTypes... __args) const
 	{ return ((*__ptr).*__pmf)(std::forward<_ArgTypes>(__args)...); }
 
     public:
@@ -648,11 +667,16 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
       // Handle smart pointers, references and pointers to derived
       template<typename _Tp>
 	_Res
-	operator()(_Tp& __object, _ArgTypes... __args) const
+	operator()(_Tp&& __object, _ArgTypes... __args) const
 	{
-	  return _M_call(__object, &__object,
+	  return _M_call(std::forward<_Tp>(__object), &__object,
 	      std::forward<_ArgTypes>(__args)...);
 	}
+
+      template<typename _Tp>
+	_Res
+	operator()(reference_wrapper<_Tp> __ref, _ArgTypes... __args) const
+	{ return operator()(__ref.get(), std::forward<_ArgTypes>(__args)...); }
 
     private:
       _Functor __pmf;
@@ -668,13 +692,16 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
 
       template<typename _Tp>
 	_Res
-	_M_call(_Tp& __object, const volatile _Class *,
+	_M_call(_Tp&& __object, const volatile _Class *,
 		_ArgTypes... __args) const
-	{ return (__object.*__pmf)(std::forward<_ArgTypes>(__args)...); }
+	{
+	  return (std::forward<_Tp>(__object).*__pmf)
+	    (std::forward<_ArgTypes>(__args)...);
+	}
 
       template<typename _Tp>
 	_Res
-	_M_call(_Tp& __ptr, const volatile void *, _ArgTypes... __args) const
+	_M_call(_Tp&& __ptr, const volatile void *, _ArgTypes... __args) const
 	{ return ((*__ptr).*__pmf)(std::forward<_ArgTypes>(__args)...); }
 
     public:
@@ -694,11 +721,16 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
 
       // Handle smart pointers, references and pointers to derived
       template<typename _Tp>
-	_Res operator()(_Tp& __object, _ArgTypes... __args) const
+	_Res operator()(_Tp&& __object, _ArgTypes... __args) const
 	{
-	  return _M_call(__object, &__object,
+	  return _M_call(std::forward<_Tp>(__object), &__object,
 	      std::forward<_ArgTypes>(__args)...);
 	}
+
+      template<typename _Tp>
+	_Res
+	operator()(reference_wrapper<_Tp> __ref, _ArgTypes... __args) const
+	{ return operator()(__ref.get(), std::forward<_ArgTypes>(__args)...); }
 
     private:
       _Functor __pmf;
@@ -720,91 +752,75 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
   template<typename _Res, typename _Class>
     class _Mem_fn<_Res _Class::*>
     {
+      using __pm_type = _Res _Class::*;
+
       // This bit of genius is due to Peter Dimov, improved slightly by
       // Douglas Gregor.
+      // Made less elegant by Jonathan Wakely to support perfect forwarding.
       template<typename _Tp>
-	_Res&
-	_M_call(_Tp& __object, _Class *) const
-	{ return __object.*__pm; }
+	auto
+	_M_call(_Tp&& __object, const _Class *) const noexcept
+	-> decltype(std::forward<_Tp>(__object).*std::declval<__pm_type&>())
+	{ return std::forward<_Tp>(__object).*__pm; }
 
       template<typename _Tp, typename _Up>
-	_Res&
-	_M_call(_Tp& __object, _Up * const *) const
-	{ return (*__object).*__pm; }
-
-      template<typename _Tp, typename _Up>
-	const _Res&
-	_M_call(_Tp& __object, const _Up * const *) const
-	{ return (*__object).*__pm; }
+	auto
+	_M_call(_Tp&& __object, _Up * const *) const noexcept
+	-> decltype((*std::forward<_Tp>(__object)).*std::declval<__pm_type&>())
+	{ return (*std::forward<_Tp>(__object)).*__pm; }
 
       template<typename _Tp>
-	const _Res&
-	_M_call(_Tp& __object, const _Class *) const
-	{ return __object.*__pm; }
-
-      template<typename _Tp>
-	const _Res&
-	_M_call(_Tp& __ptr, const volatile void*) const
+	auto
+	_M_call(_Tp&& __ptr, const volatile void*) const
+	noexcept(noexcept((*__ptr).*std::declval<__pm_type&>()))
+	-> decltype((*__ptr).*std::declval<__pm_type&>())
 	{ return (*__ptr).*__pm; }
 
-      template<typename _Tp> static _Tp& __get_ref();
-
-      template<typename _Tp>
-	static __sfinae_types::__one __check_const(_Tp&, _Class*);
-      template<typename _Tp, typename _Up>
-	static __sfinae_types::__one __check_const(_Tp&, _Up * const *);
-      template<typename _Tp, typename _Up>
-	static __sfinae_types::__two __check_const(_Tp&, const _Up * const *);
-      template<typename _Tp>
-	static __sfinae_types::__two __check_const(_Tp&, const _Class*);
-      template<typename _Tp>
-	static __sfinae_types::__two __check_const(_Tp&, const volatile void*);
-
     public:
-      template<typename _Tp>
-	struct _Result_type
-	: _Mem_fn_const_or_non<_Res,
-	  (sizeof(__sfinae_types::__two)
-	   == sizeof(__check_const<_Tp>(__get_ref<_Tp>(), (_Tp*)0)))>
-	{ };
-
-      template<typename _Signature>
-	struct result;
-
-      template<typename _CVMem, typename _Tp>
-	struct result<_CVMem(_Tp)>
-	: public _Result_type<_Tp> { };
-
-      template<typename _CVMem, typename _Tp>
-	struct result<_CVMem(_Tp&)>
-	: public _Result_type<_Tp> { };
-
       explicit
-      _Mem_fn(_Res _Class::*__pm) : __pm(__pm) { }
+      _Mem_fn(_Res _Class::*__pm) noexcept : __pm(__pm) { }
 
       // Handle objects
       _Res&
-      operator()(_Class& __object) const
+      operator()(_Class& __object) const noexcept
       { return __object.*__pm; }
 
       const _Res&
-      operator()(const _Class& __object) const
+      operator()(const _Class& __object) const noexcept
       { return __object.*__pm; }
+
+      _Res&&
+      operator()(_Class&& __object) const noexcept
+      { return std::forward<_Class>(__object).*__pm; }
+
+      const _Res&&
+      operator()(const _Class&& __object) const noexcept
+      { return std::forward<const _Class>(__object).*__pm; }
 
       // Handle pointers
       _Res&
-      operator()(_Class* __object) const
+      operator()(_Class* __object) const noexcept
       { return __object->*__pm; }
 
       const _Res&
-      operator()(const _Class* __object) const
+      operator()(const _Class* __object) const noexcept
       { return __object->*__pm; }
 
       // Handle smart pointers and derived
       template<typename _Tp>
-	typename _Result_type<_Tp>::type
-	operator()(_Tp& __unknown) const
-	{ return _M_call(__unknown, &__unknown); }
+	auto
+	operator()(_Tp&& __unknown) const
+	noexcept(noexcept(std::declval<_Mem_fn*>()->_M_call
+			  (std::forward<_Tp>(__unknown), &__unknown)))
+	-> decltype(this->_M_call(std::forward<_Tp>(__unknown), &__unknown))
+	{ return _M_call(std::forward<_Tp>(__unknown), &__unknown); }
+
+      template<typename _Tp>
+	auto
+	operator()(reference_wrapper<_Tp> __ref) const
+	noexcept(noexcept(std::declval<_Mem_fn&>()(__ref.get())))
+	-> decltype((*this)(__ref.get()))
+	{ return operator()(__ref.get()); }
 
     private:
       _Res _Class::*__pm;
@@ -819,7 +835,7 @@ _GLIBCXX_HAS_NESTED_TYPE(result_type)
    */
   template<typename _Tp, typename _Class>
     inline _Mem_fn<_Tp _Class::*>
-    mem_fn(_Tp _Class::* __pm)
+    mem_fn(_Tp _Class::* __pm) noexcept
     {
       return _Mem_fn<_Tp _Class::*>(__pm);
     }
